fix horizontal scrolling

--- a/css/main.css
+++ b/css/main.css
@@ -585,6 +585,12 @@ input {
   opacity: 0;
 }
 
+@media (max-width: 800px) {
+  .ml5 {
+    font-size: 40px;
+  }
+}
+
 .container-about-me {
   margin: 0 auto 60px auto;
   padding-left: 15px;
@@ -622,16 +628,9 @@ input {
   padding: 20px;
   -webkit-box-shadow: 10px 10px 15px -5px rgba(8, 38, 78, 0.3);
   box-shadow: 10px 10px 15px -5px rgba(8, 38, 78, 0.3);
-  /*box-shadow: 10px -10px  rgba(0,0,0,0.6); */
 }
 
-@media (max-width: 850px) {
-  .image-malin {
-    width: 290px;
-  }
-}
-
-@media (max-width: 700px) {
+@media (max-width: 800px) {
   .container-about-me {
     -ms-flex-wrap: wrap;
     flex-wrap: wrap;
@@ -644,9 +643,16 @@ input {
     -ms-flex-order: 1;
     order: 1;
     padding-right: 0px;
+    -ms-flex-preferred-size: 100%;
+    flex-basis: 100%;
   }
   .text-about-me h2 {
-    margin: 30px auto 10px;
+    margin: 30px auto 10px auto;
+    text-align: center;
+  }
+  .image-about-me {
+    -ms-flex-preferred-size: 100%;
+    flex-basis: 100%;
     text-align: center;
   }
 }
@@ -682,8 +688,6 @@ input {
   bottom: 18px;
   left: 18px;
   right: 18px;
-  background: rgba(3, 15, 31, 0.85);
-  background: rgba(70, 119, 171, 0.9);
   background: rgba(0, 0, 0, 0.6);
   padding: 0px 10px 12px 10px;
 }
@@ -692,6 +696,17 @@ input {
   color: #E3DEC5;
   padding-bottom: 5px;
   font-size: 22px;
+}
+
+@media (max-width: 400px) {
+  .work-item img {
+    width: 100%;
+    margin: 10px 0 10px 0;
+  }
+  .work-desc {
+    left: 8px;
+    right: 8px;
+  }
 }
 
 @media (min-width: 1020px) {
@@ -769,8 +784,20 @@ input {
   border-width: 1em 1em 0 0;
 }
 
+@media (max-width: 800px) {
+  .ribbon {
+    width: 60%;
+  }
+}
+
+@media (max-width: 550px) {
+  .ribbon {
+    width: 75%;
+  }
+}
+
 .container-testimonials {
-  margin: 0 auto 150px auto;
+  margin: 0 auto 110px auto;
   padding-left: 15px;
   padding-right: 15px;
   max-width: 900px;
@@ -896,15 +923,15 @@ input {
 }
 
 .container-form h2 {
-  margin-bottom: 26px;
+  margin-bottom: 20px;
   text-align: center;
   color: #EBC164;
 }
 
 .contact-break {
   border: solid 0.5px rgba(235, 193, 100, 0.5);
-  width: 700px;
-  margin-left: -60px;
+  width: 100%;
+  margin-left: 0px;
   margin-bottom: 30px;
 }
 
