--- a/scss/layout/_contact.scss
+++ b/scss/layout/_contact.scss
@@ -12,15 +12,15 @@
 }
 
 .container-form h2 {
-  margin-bottom: 26px;
+  margin-bottom: 20px;
   text-align: center;
   color: $brightgold;
 }
 
 .contact-break {
   border: solid 0.5px rgba(235,193,100,0.5);
-  width: 700px;
-  margin-left: -60px;
+  width: 100%;
+  margin-left: 0px;
   margin-bottom: 30px;
 }
 
