--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -114,4 +114,10 @@
   opacity: 0;
 }
 
+@media (max-width: 800px) {
+
+  .ml5 {
+    font-size: 40px;
+  }
+}
 
