--- a/scss/layout/_testimonials.scss
+++ b/scss/layout/_testimonials.scss
@@ -1,12 +1,11 @@
 .container-testimonials {
-  margin: 0 auto 150px auto;
+  margin: 0 auto 110px auto;
   padding-left: 15px;
   padding-right: 15px;
   max-width: 900px;
   display: flex;
   justify-content: center;
 }
-
 
 /*
  * ribbon medallion
