--- a/scss/layout/_work.scss
+++ b/scss/layout/_work.scss
@@ -24,8 +24,6 @@
   bottom: 18px;
   left: 18px;
   right: 18px;
-  background: rgba(3, 15, 31, 0.85);
-  background: rgba(70, 119, 171, 0.9);
   background: rgba(0, 0, 0, 0.6);
   padding: 0px 10px 12px 10px;
 }
@@ -34,6 +32,19 @@
   color: $light;
   padding-bottom: 5px;
   font-size: 22px;
+}
+
+@media (max-width: 400px) {
+  
+  .work-item img {
+    width: 100%;
+    margin: 10px 0 10px 0;
+  }
+
+  .work-desc {
+    left: 8px;
+    right: 8px;
+  }
 }
 
 @media (min-width: 1020px) {
@@ -51,8 +62,6 @@
     transform: translateY(0%);
   }
 }
-
-
 
 /** TITLE WITH RIBBON **/
 
@@ -109,4 +118,18 @@
  .ribbon .ribbon-content:after {
     right: 0;
     border-width: 1em 1em 0 0;
+ }
+
+ @media (max-width: 800px) {
+
+  .ribbon {
+    width: 60%;
+  }
+ }
+
+ @media (max-width: 550px) {
+
+  .ribbon {
+    width: 75%;
+  }
  }
